File: components/nexus-repository-content/src/main/java/org/sonatype/nexus/repository/content/upgrades/ComponentSearchMigrationStep_1_22.java